# Examen-final-HPC-USA

./: CMakeLists.txt  CMakeLists.txt.user.84773c7  EDA_Parcial_Final_HPC.ipynb  README.md  main.cpp
Debug/: CMakeCache.txt  Makefile  costo.txt  thetas.txt
Debug/.cmake/api/v1/reply/: cache-v2-f50ea7c11bcd5a9a84d7.json  codemodel-v2-ead9f3346fa4f27da60c.json  index-2022-10-10T19-02-56-0021.json
Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-e6ff65362826afd9a523.json  target-LinearProject-Debug-8d05f4995aab9e171413.json
LinearProject/ClassExtraction/: extractiondata.cpp  extractiondata.h
LinearProject/Debug/: cmake_install.cmake
LinearProject/Regression/: regression.cpp  regression.h
